--- a/src/Card.css
+++ b/src/Card.css
@@ -6,4 +6,31 @@
 
 .container--card {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.card {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  background-color: rgb(32, 127, 182);
+
+  margin: 45px;
+  border-radius: 30px;
+}
+
+.card h1 {
+  font-size: 18px;
+  padding-bottom: 5px;
+  padding-top: 30px;
+  color: rgb(0, 0, 0);
+}
+
+.card p {
+  padding-bottom: 10px;
+  padding-top: 20px;
 }
