--- a/src/Header.css
+++ b/src/Header.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-h1 {
+.text--header {
   font-size: 40px;
   padding-top: 80px;
   padding-bottom: 20px;
@@ -23,4 +23,5 @@ input {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-bottom: 50px;
 }
