--- a/src/Card.css
+++ b/src/Card.css
@@ -34,3 +34,14 @@
   padding-bottom: 10px;
   padding-top: 20px;
 }
+
+/* MEDIA QUERY SMARTPHONE  */
+@media only screen and (max-width: 500px) {
+}
+
+/* MEDIA QUERY IPAD */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .card {
+    margin: 30px;
+  }
+}
