--- a/src/Header.css
+++ b/src/Header.css
@@ -14,7 +14,7 @@
 
 input {
   width: 400px;
-  height: 30px;
+  height: 50px;
   padding: 10px;
 }
 
@@ -24,4 +24,38 @@ input {
   justify-content: center;
   align-items: center;
   padding-bottom: 50px;
+}
+
+/* MEDIA QUERY SMARTPHONE  */
+@media only screen and (max-width: 700px) {
+  .container--header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .text--header {
+    font-size: 30px;
+  }
+  input {
+    width: 350px;
+    height: 50px;
+  }
+}
+
+/* MEDIA QUERY IPAD */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .container--header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .text--header {
+    font-size: 40px;
+  }
+  input {
+    width: 480px;
+    height: 50px;
+  }
 }
